[tool.poetry]
name = "releziquantification"
version = "0.1.0"
description = "\"A Python package to analyse the relative elipsoid zone intensity (relEZI) by oct imaging provided by HEYEX Software\""
authors = ["Ben Isselmann <ben.isselmann@gmail.com>"]
license = "\"MIT license\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
xlsxwriter = "^3.1.1"
read-roi = "^1.6.0"
imgaug = "^0.4.0"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
scikit-image = "^0.20.0"
tqdm = "^4.65.0"
pandas = "^2.0.1"
ipywidgets = "^8.0.6"
simpleitk = "^2.2.1"
pytest-runner = "^6.0.0"
pytest = "^7.3.1"
mahotas = "^1.4.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
